--- a/profile.css
+++ b/profile.css
@@ -6,6 +6,7 @@ body {
     text-align: center;
     overflow-x: hidden;
     background: black;
+    color: white;
 }
 
 /* Starry Background Animation */
@@ -14,7 +15,6 @@ body {
     to { opacity: 0.5; }
 }
 
-/* Background Stars */
 .stars {
     position: fixed;
     width: 100%;
@@ -34,7 +34,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url('pexels-pixabay-258149.jpg') no-repeat center center;
+    background: url('p') no-repeat center center;
     background-size: cover;
     opacity: 0.3;
     animation: nebulaMove 30s linear infinite;
@@ -47,9 +47,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
-    padding: 20px;
-    color: white;
+    padding: 40px;
 }
 
 .profile {
@@ -68,7 +66,7 @@ body {
     margin: 20px auto;
     padding: 20px;
     text-align: left;
-    background: rgba(255, 255, 255, 0.1); /* Transparent white */
+    background: rgba(255, 255, 255, 0.1);
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.2);
     color: white;
