--- a/profile.css
+++ b/profile.css
@@ -34,7 +34,7 @@ body {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url('p') no-repeat center center;
+    background: url('moon-8855057_1280.jpg') no-repeat center center;
     background-size: cover;
     opacity: 0.3;
     animation: nebulaMove 30s linear infinite;
